--- a/src/Header/header.css
+++ b/src/Header/header.css
@@ -1,4 +1,5 @@
 .header{
+    padding: 0px;
     height: 500px;
     width: 100%;
     background-color: rgb(108, 176, 185);
@@ -8,7 +9,8 @@
     margin:auto;
 }
 .img{
-    
+    position: relative;
+    top: 40px;
 }
 .title1{
     height: 50px;
