--- a/src/Footer/footer.css
+++ b/src/Footer/footer.css
@@ -1,9 +1,48 @@
 .footer{
-    height: 2em;
+    height: 300px;
     background-color: bisque;
     display: flex;
-    justify-content: center;
     align-content: center;
     font-size: 1.5em;
     color: blue;
+}
+.imag{
+    width: 50px;
+    height: 50px;
+    background-image: url(1.png);
+    float: left;
+    margin-top: 120px;
+}
+.explain{
+    height: 300px;
+    width: 450px;
+    float: left;
+    margin-right: 200px;
+}
+.explain01{
+    float:right;
+    margin-top: 125px;
+}
+.company{
+    width: 650px;
+    height: 300px;
+    align-content: center;
+    margin-right: 200px;
+}
+.company01{
+    width: 550px;
+    margin-top: 100px;
+    margin-left: 50px;
+    margin-right: 50px;
+}
+.download{
+    width: 399px;
+}
+.iPhone{
+    margin-top: 60px;
+    margin-left: 120px;
+}
+.Android{
+    margin-top: 80px;
+    margin-left: 120px;
 }
