--- a/src/HomePage/homepage.css
+++ b/src/HomePage/homepage.css
@@ -1,17 +1,11 @@
 .buy{
     margin: 0;
-    width: 100%;
+    width: 50px;
     height: 20px;
-    background-color: bisque;
     display: flex;
-    justify-content: space-around;
-    align-content: center;
 }
 .sale{
-    width: 100%;
+    width: 50px;
     height: 20px;
-    background-color: rgb(75, 62, 47);
     display: flex;
-    justify-content: space-around;
-    align-content: center;
 }
