--- a/src/Footer/footer.css
+++ b/src/Footer/footer.css
@@ -1,42 +1,43 @@
 .footer{
-    height: 300px;
+    height: 300px;width: 100%;
     background-color: bisque;
     display: flex;
     align-content: center;
     font-size: 1.5em;
     color: blue;
 }
+.explain{
+    height: 300px;
+    width: 30%;
+    float: left;
+    margin-right: 200px;
+}
+.explain01{
+    width: 80%;
+    float:right;
+    margin-top: 125px;
+}
 .imag{
-    width: 50px;
+    width: 11%;
     height: 50px;
     background-image: url(1.png);
     float: left;
     margin-top: 120px;
 }
-.explain{
-    height: 300px;
-    width: 450px;
-    float: left;
-    margin-right: 200px;
-}
-.explain01{
-    float:right;
-    margin-top: 125px;
-}
 .company{
-    width: 650px;
+    width: 43.3%;
     height: 300px;
     align-content: center;
     margin-right: 200px;
 }
 .company01{
-    width: 550px;
+    width: 85%;
     margin-top: 100px;
     margin-left: 50px;
     margin-right: 50px;
 }
 .download{
-    width: 399px;
+    width: 25%;
 }
 .iPhone{
     margin-top: 60px;
