--- a/src/HomePage/homepage.css
+++ b/src/HomePage/homepage.css
@@ -1,3 +1,6 @@
+.bady{
+    align-content: center;
+}
 .buy{
     margin: 0;
     width: 50px;
@@ -8,10 +11,4 @@
     width: 50px;
     height: 20px;
     display: flex;
-<<<<<<< HEAD
-=======
-    justify-content: space-around;
-    align-content: center;
-    
->>>>>>> 3a0b6cbea2daefcbeb6310bcec39ac79e9c55d02
 }
