--- a/src/HomePage/homepage.css
+++ b/src/HomePage/homepage.css
@@ -1,14 +1,21 @@
 .bady{
-    align-content: center;
+    height: 1100px;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+.people{
+    text-align:center;
+    font-size: 2em;
+    color: brown;
+}
+.user{
+    text-align:center;
+    font-size: 2em;
+    color: brown;
 }
 .buy{
-    margin: 0;
-    width: 50px;
-    height: 20px;
-    display: flex;
-}
-.sale{
-    width: 50px;
-    height: 20px;
-    display: flex;
+    text-align:center;
+    font-size: 2em;
+    color: brown;
 }
