--- a/src/Register/register.css
+++ b/src/Register/register.css
@@ -53,21 +53,28 @@
         position: relative;
         top: 5%;
         left: 40%;
+        width: 230px;
 }
 .passwordbox{
     position: relative;
     top: 8%;
     left: 40%;
+    width: 230px;
+
 }
 .emilbox{
     position: relative;
     top: 13%;
     left: 40%;
+    width: 230px;
+
 }
 .telbox{
     position: relative;
     top: 11%;
     left: 40%;
+    width: 230px;
+
 }
 .button{
     width: 140px;
